tests/suite/snapshots/suite__check__tests__check__bad_mixed_array.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_mixed_array.xi:2:30]
   │
 2 │     i:int[][] = {{}, {true}, {1}}
   ·                              ─┬─  
   ·                               ╰─── Expected bool[] but found int[]
───╯

